--- a/login.html
+++ b/login.html
@@ -40,6 +40,8 @@
         </form>
         <p>Don't have an account? <a href="register.html">Register</a></p>
     </div>
+    
 
+    <script src="auth.js"></script>
 </body>
 </html>
