--- a/register.html
+++ b/register.html
@@ -49,5 +49,7 @@
         <p>Already have an account? <a href="login.html">Login</a></p>
     </div>
 
+
+    <script src="auth.js"></script>
 </body>
 </html>
