--- a/register.html
+++ b/register.html
@@ -8,46 +8,50 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header class="header">
         <nav class="navbar">
             <div class="container">
-                <h1 class="logo">JustRecipes<i class="fas fa-carrot"></i></h1>
+                <h1 class="logo">MealDelight<i class="fas fa-utensils"></i></h1>
                 <ul class="nav-links">
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="">PRODUCTS</a></li>
-                    <li><a href="">SERVICES</a></li>
-                    <li><a href="">BLOGS</a></li>
+                    <li><a href=""><i class="fas fa-cart-shopping"></i></a></li>
+                    <li id="authLinks"><a href="" id="loginLink">Log <i class="fa-regular fa-user"></i></a></li>
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#menu">MENU</a></li>
+                    <li><button class="logout" id="logoutBtn" style="display: none;">Logout</button></li>
+                    <!-- <li><a href="">PRODUCTS</a></li> -->
                 </ul>
+                <div class="hamburger" id="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </nav>
-    </header>
 
 
-    <div class="auth-container">
-        <h1>Register</h1>
-        <form id="registerForm">
-            <div class="input-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" placeholder="Enter Your Name">
-            </div>
-            <div class="input-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" placeholder="Enter Your Email">
-            </div>
-            <div class="input-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" placeholder="Enter Your Password">
-            </div>
-            <div class="input-group">
-                <label for="confirmPassword">Password:</label>
-                <input type="password" id="confirmPassword" placeholder="Confirm Your Password">
-            </div>
-            <button type="submit">Register</button>
-            <p id="registerError" class="error-message"></p>
-        </form>
-        <p>Already have an account? <a href="login.html">Login</a></p>
-    </div>
+        <div class="auth-container">
+            <h1>Register</h1>
+            <form id="registerForm">
+                <div class="input-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" placeholder="Enter Your Name">
+                </div>
+                <div class="input-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" placeholder="Enter Your Email">
+                </div>
+                <div class="input-group">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" placeholder="Enter Your Password">
+                </div>
+                <div class="input-group">
+                    <label for="confirmPassword">Password:</label>
+                    <input type="password" id="confirmPassword" placeholder="Confirm Your Password">
+                </div>
+                <button type="submit">Register</button>
+                <p id="registerError" class="error-message"></p>
+            </form>
+            <p>Already have an account? <a href="login.html">Login</a></p>
+        </div>
 
 
     <script src="auth.js"></script>
